manifests/aws/fluent-es-daemonset.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  labels:
    name: fluentd-es
  name: fluentd-es
  namespace: kubeprod
spec:
  selector:
    matchLabels:
      name: fluentd-es
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "24231"
        prometheus.io/scrape: "true"
        scheduler.alpha.kubernetes.io/critical-pod: ""
      labels:
        name: fluentd-es
    spec:
      containers:
      - args: []
        image: bitnami/fluentd:1.5.0-r1
        imagePullPolicy: IfNotPresent
        name: fluentd-es
        ports: []
        resources:
          limits:
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 200Mi
        securityContext:
          runAsUser: 0
        stdin: false
        tty: false
        volumeMounts:
        - mountPath: /opt/bitnami/fluentd/conf
          name: config
          readOnly: true
        - mountPath: /opt/bitnami/fluentd/conf/config.d
          name: configd
          readOnly: true
        - mountPath: /var/lib/docker/containers
          name: varlibdockercontainers
          readOnly: true
        - mountPath: /var/log
          name: varlog
          readOnly: true
        - mountPath: /var/log/fluentd-buffers
          name: varlogbuffers
        - mountPath: /var/log/fluentd-pos
          name: varlogpos
      imagePullSecrets: []
      initContainers: []
      serviceAccountName: fluentd-es
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/system
        operator: Exists
      volumes:
      - configMap:
          name: fluentd-es
        name: config
      - configMap:
          name: fluentd-es-configd
        name: configd
      - hostPath:
          path: /var/lib/docker/containers
          type: Directory
        name: varlibdockercontainers
      - hostPath:
          path: /var/log
          type: Directory
        name: varlog
      - hostPath:
          path: /var/log/fluentd-buffers
          type: DirectoryOrCreate
        name: varlogbuffers
      - hostPath:
          path: /var/log/fluentd-pos
          type: DirectoryOrCreate
        name: varlogpos
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
