manifests/aws/kibana-deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    name: kibana
  name: kibana
  namespace: kubeprod
spec:
  minReadySeconds: 30
  replicas: 1
  selector:
    matchLabels:
      name: kibana
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: kibana
    spec:
      containers:
      - args: []
        image: bitnami/kibana:6.6.0
        imagePullPolicy: IfNotPresent
        name: kibana
        ports:
        - containerPort: 5601
          name: ui
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 10m
        securityContext:
          runAsUser: 1001
        stdin: false
        tty: false
        volumeMounts:
        - mountPath: /opt/bitnami/kibana/plugins
          name: plugins
      imagePullSecrets: []
      securityContext:
        fsGroup: 1001
      terminationGracePeriodSeconds: 30
      volumes:
      - name: plugins
        persistentVolumeClaim:
          claimName: kibana-plugins
