manifests/aws/oauth2-proxy-deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    name: oauth2-proxy
  name: oauth2-proxy
  namespace: kubeprod
spec:
  minReadySeconds: 30
  replicas: 2
  selector:
    matchLabels:
      name: oauth2-proxy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: oauth2-proxy
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  name: oauth2-proxy
              topologyKey: kubernetes.io/hostname
            weight: 70
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  name: oauth2-proxy
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 70
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  name: oauth2-proxy
              topologyKey: failure-domain.beta.kubernetes.io/region
            weight: 70
      containers:
      - args:
        - --cookie-domain=cosmic.rocks
        - --cookie-refresh=3h
        - --cookie-secure=true
        - --email-domain=cosmic.rocks
        - --http-address=0.0.0.0:4180
        - --provider=google
        - --redirect-url=https://auth.cosmic.rocks/oauth2/callback
        - --set-xauthrequest=true
        - --tls-cert=
        - --upstream=file:///dev/null
        image: docker.io/colemickens/oauth2_proxy:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /ping
            port: http
          initialDelaySeconds: 30
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          name: http
        readinessProbe:
          httpGet:
            path: /ping
            port: http
        resources:
          requests:
            cpu: 10m
        stdin: false
        tty: false
        volumeMounts: []
      imagePullSecrets: []
      initContainers: []
      terminationGracePeriodSeconds: 30
      volumes: []
