manifests/aws/nginx-ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
  labels:
    name: nginx-ingress
  name: nginx-ingress
  namespace: kubeprod
spec:
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    protocol: TCP
  - name: https
    port: 443
    protocol: TCP
  selector:
    name: nginx-ingress-controller
  type: LoadBalancer
