manifests/aws/oauth2-proxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: oauth2-proxy
  name: oauth2-proxy
  namespace: kubeprod
spec:
  ports:
  - name: http
    port: 4180
    targetPort: 4180
  selector:
    name: oauth2-proxy
  type: ClusterIP
