manifests/aws/kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User, X-Auth-Request-Email
    nginx.ingress.kubernetes.io/auth-signin: https://auth.cosmic.rocks/oauth2/start?rd=%2F$server_name$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://auth.cosmic.rocks/oauth2/auth
  labels:
    name: kibana-logging
  name: kibana-logging
  namespace: kubeprod
spec:
  rules:
  - host: kibana.cosmic.rocks
    http:
      paths:
      - backend:
          serviceName: kibana-logging
          servicePort: 5601
        path: /
  tls:
  - hosts:
    - kibana.cosmic.rocks
    secretName: kibana-logging-tls
